--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "electron": "^7.1.7",
     "electron-package": "^0.1.0"
+  },
+  "dependencies": {
+    "got": "^10.2.2",
+    "request": "^2.88.0"
   }
 }
