--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron-package": "^0.1.0"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "got": "^10.2.2",
     "request": "^2.88.0"
   }
